# llm-rs

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile
docs/: README.md
src/: chain-from-json.yaml  errors.rs  main.rs
src/commands/: config.rs  llm.rs  mod.rs  prompt.rs
