[package]
name = "llm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
llm-chain = "0.12.0"
llm-chain-openai = "0.12.0"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
